--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-camel.component.jms.connection-factory.user=Mariem.Adamou-Douma@etu.univ-paris1.fr
-camel.component.jms.connection-factory.password=sgnMzLGsL/I8nZgq
+camel.component.jms.connection-factory.user=Adrien.Tandabany@etu.univ-paris1.fr
+camel.component.jms.connection-factory.password=jmlgxTX7ax5xLrMR
 camel.component.jms.connection-factory.brokerURL=tcp://broker.miage.dev:80
 camel.component.jms.connection-factory=#class:org.apache.activemq.artemis.jms.client.ActiveMQJMSConnectionFactory
